Fixed synopsis positioning on mobile

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -20,6 +20,7 @@ body {
 }
 
 .container {
+  display: flex;
   flex: 1;
   padding-top: 4em;
   padding-bottom: 4em;
